fix: parse test counts from Jest output when junit.xml not generated

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -127,19 +127,69 @@ jobs:
         working-directory: ${{ matrix.service }}
         run: |
           echo "🧪 Running tests for ${{ matrix.service }}..."
-          npm run test:ci 2>&1 | tee test-output.log || true
+          
+          # Ensure jest-junit is installed
+          npm list jest-junit || npm install jest-junit --save-dev
+          
+          # Create reports directory
+          mkdir -p reports
+          
+          # Run tests - capture exit code but don't fail
+          set +e
+          npm run test:ci 2>&1 | tee test-output.log
+          TEST_EXIT_CODE=$?
+          set -e
+          
+          echo "📁 Test exit code: $TEST_EXIT_CODE"
           echo "📁 Checking reports directory..."
           ls -la reports/ 2>/dev/null || echo "No reports directory"
+          
+          # Check if junit.xml was generated
           if [ -f "reports/junit.xml" ]; then
             echo "✅ junit.xml generated successfully"
+            # Show summary from junit.xml
+            head -5 reports/junit.xml || true
           else
-            echo "⚠️ junit.xml not found, creating placeholder"
-            mkdir -p reports
-            echo '<?xml version="1.0" encoding="UTF-8"?><testsuites><testsuite name="${{ matrix.service }}" tests="0" failures="0" errors="0" skipped="0"></testsuite></testsuites>' > reports/junit.xml
+            echo "⚠️ junit.xml not found"
+            
+            # Parse test output to create junit.xml
+            TESTS_TOTAL=0
+            TESTS_PASSED=0
+            TESTS_FAILED=0
+            
+            if [ -f "test-output.log" ]; then
+              # Extract test counts from Jest output
+              TESTS_LINE=$(grep -E "^Tests:" test-output.log | tail -1 || echo "")
+              if [ -n "$TESTS_LINE" ]; then
+                TESTS_FAILED=$(echo "$TESTS_LINE" | grep -oP '\d+(?= failed)' || echo "0")
+                TESTS_PASSED=$(echo "$TESTS_LINE" | grep -oP '\d+(?= passed)' || echo "0")
+                TESTS_TOTAL=$(echo "$TESTS_LINE" | grep -oP '\d+(?= total)' || echo "0")
+              fi
+            fi
+            
+            # Default values if parsing failed
+            TESTS_TOTAL=${TESTS_TOTAL:-0}
+            TESTS_PASSED=${TESTS_PASSED:-0}
+            TESTS_FAILED=${TESTS_FAILED:-0}
+            
+            echo "📊 Parsed from output: total=$TESTS_TOTAL, passed=$TESTS_PASSED, failed=$TESTS_FAILED"
+            
+            # Create junit.xml with actual test counts
+            cat > reports/junit.xml << EOF
+<?xml version="1.0" encoding="UTF-8"?>
+<testsuites name="${{ matrix.service }}" tests="$TESTS_TOTAL" failures="$TESTS_FAILED" errors="0" skipped="0">
+  <testsuite name="${{ matrix.service }}" tests="$TESTS_TOTAL" failures="$TESTS_FAILED" errors="0" skipped="0">
+    <testcase classname="${{ matrix.service }}" name="Aggregated Tests" time="0"/>
+  </testsuite>
+</testsuites>
+EOF
+            echo "✅ Created junit.xml with test counts from output"
           fi
         env:
           NODE_OPTIONS: --experimental-vm-modules
           CI: true
+          JEST_JUNIT_OUTPUT_DIR: reports
+          JEST_JUNIT_OUTPUT_NAME: junit.xml
 
       - name: 📊 Upload Test Results
         uses: actions/upload-artifact@v4
